# ==================================================================================================
# Filename : ./slides/png/Makefile
# --------------------------------
#
# - Create the PNG files from the PDF file.
#
# - Process the PNG files.
#
# ==================================================================================================


SUBDIRS    =

EXTRA_DIST =

CLEANFILES =


all               : create_png_files \
                    process_png_files


create_png_files  :

	${MAKE} -f ./Makefile_create_png_files


process_png_files :

	${MAKE} -f ./Makefile_process_png_files


clean-local       :

	${MAKE} -f ./Makefile_create_png_files clean


displaySettings   :

	${MAKE} -f ./Makefile_displaySettings

